--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.8.8",
+    "@adonisjs/lucid": "^18.2.0",
     "@adonisjs/repl": "^3.1.11",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
