--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@adonisjs/core": "^5.8.8",
     "@adonisjs/lucid": "^18.2.0",
     "@adonisjs/repl": "^3.1.11",
+    "@sentry/node": "^7.16.0",
+    "@sentry/tracing": "^7.16.0",
     "luxon": "^3.0.4",
     "mysql2": "^2.3.3",
     "proxy-addr": "^2.0.7",
